@@ -2405,7 +2405,7 @@ Tcl_LrepeatObjCmd(
     register Tcl_Obj *CONST objv[])
 				/* The argument objects. */
 {
-    int elementCount, i, result;
+    int elementCount, i, result, totalElems;
     Tcl_Obj *listPtr, **dataArray;
     List *listRepPtr;
 
@@ -2433,6 +2433,22 @@ Tcl_LrepeatObjCmd(
 
     objc -= 2;
     objv += 2;
+
+    /*
+     * Final sanity check. Total number of elements must fit in a signed
+     * integer. We also limit the number of elements to 512M-1 so allocations
+     * on 32-bit machines are guaranteed to be less than 2GB! [Bug 2130992]
+     */
+
+    totalElems = objc * elementCount;
+    if (totalElems/objc != elementCount || totalElems/elementCount != objc) {
+	Tcl_AppendResult(interp, "too many elements in result list", NULL);
+	return TCL_ERROR;
+    }
+    if (totalElems >= 0x20000000) {
+	Tcl_AppendResult(interp, "too many elements in result list", NULL);
+	return TCL_ERROR;
+    }
 
     /*
      * Get an empty list object that is allocated large enough to hold each
